--- a/config
+++ b/config
@@ -5,7 +5,7 @@ VIVADO_VERSION=2019.1
 VIVADO_SETUP=Xilinx_Vivado_SDK_2019.1_0524_1430.tar.gz
 
 #Desired image name
-IMAGE_NAME=vivado_sds_${VIVADO_VERSION}
+IMAGE_NAME=futafi/vivado:${VIVADO_VERSION}
 
 #FIXME: figure this out automatically
 DOCKERHOST_IP=172.17.0.1
